freest/test/prog/Invalid/Typing/UnexpectedTypeArg/UnexpectedTypeArg.fst
module UnexpectedTypeArg where

foo : Int
foo = (\(x : Int) -> x) @Int 0
